[gd_scene load_steps=5 format=3 uid="uid://c5ofuigpjsovr"]

[ext_resource type="Script" uid="uid://by2hgr3dcykih" path="res://Other/Scenes/User Interface/Debug/debug_display_values.gd" id="1_6cpwm"]
[ext_resource type="Theme" uid="uid://8i27k6tj1d3o" path="res://Other/Themes/basic.tres" id="2_osdyr"]
[ext_resource type="Theme" uid="uid://dcxfejhbbj3pi" path="res://Other/Themes/button_menu.tres" id="3_me5a5"]
[ext_resource type="PackedScene" uid="uid://b5onnei6gn30p" path="res://Other/Scenes/User Interface/Debug/animation_ui.tscn" id="4_qdv36"]

[node name="debug_display_values" type="CanvasLayer"]
layer = 127
offset = Vector2(-4000, -4000)
scale = Vector2(0.01, 0.01)
transform = Transform2D(0.01, 0, 0, 0.01, -4000, -4000)
script = ExtResource("1_6cpwm")

[node name="names" type="VBoxContainer" parent="."]
offset_left = 1280.0
offset_right = 1320.0
offset_bottom = 736.0
theme = ExtResource("2_osdyr")

[node name="1" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="2" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="3" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="4" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="5" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="6" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="7" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="8" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="9" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="10" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="11" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="12" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="13" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="14" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="15" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="16" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="17" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="18" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="19" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="20" type="Label" parent="names"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="values" type="VBoxContainer" parent="."]
offset_left = 1568.0
offset_right = 1608.0
offset_bottom = 736.0
theme = ExtResource("2_osdyr")

[node name="1" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="2" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="3" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="4" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="5" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="6" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="7" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="8" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="9" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="10" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="11" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="12" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="13" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="14" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="15" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="16" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="17" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="18" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="19" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="20" type="Label" parent="values"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="cooldown_refresh" type="Timer" parent="."]
autostart = true

[node name="bg" type="ColorRect" parent="."]
offset_left = 1200.0
offset_right = 1664.0
offset_bottom = 896.0
color = Color(0.273, 0.12, 0.048, 0.3)

[node name="close" type="Button" parent="."]
z_index = 25
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_right = -232.0
offset_bottom = 24.0
grow_horizontal = 0
theme = ExtResource("3_me5a5")
theme_override_font_sizes/font_size = 16
text = "X"

[node name="animation_ui" parent="." instance=ExtResource("4_qdv36")]

[connection signal="timeout" from="cooldown_refresh" to="." method="_on_cooldown_refresh_timeout"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="animation_finished" from="animation_ui" to="." method="_on_animation_ui_animation_finished"]
